# aws-langchain-pdf-rag-app

./: README.md  TechStackDecision.md
backend/: .env.example  README.md  pyproject.toml
backend/src/: main.py
backend/src/backend/: database.py
backend/src/config/: settings.py
backend/src/eval/: tru_eval.py
backend/src/rag/: indexing.py
backend/src/routes/: __init__.py  documents.py  qa.py
backend/src/services/: document_processing.py  qa_service.py
backend/src/utils/: utils.py
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnswerDisplay.tsx  DocumentList.tsx  DocumentUpload.tsx  Header.tsx  QuestionInput.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
