[project]
name = "document-qa-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Shruti-lab",email = "shrutibpatil45@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "trulens (>=2.2.4,<3.0.0)",
    "pymongo (>=4.14.1,<5.0.0)",
    "llama-index (>=0.13.3,<0.14.0)",
    "llama-index-vector-stores-mongodb (>=0.8.0,<0.9.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "motor (>=3.7.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.scripts]
my-script = "backend.main:start"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
